# pymssql

./: .bzrignore  .cvsignore  .dockerignore  .gitignore  .hgeol  .hgignore  .readthedocs.yaml  .travis.yml  Alpine.dockerfile  ChangeLog  ChangeLog.rst  ChangeLog_highlights.rst  Dockerfile  MANIFEST  MANIFEST.in  Makefile.debian  PKG-INFO  README  README.rst  README_building_and_developing.rst  TODO  _mssql.pxd  _mssql.pyx  apitest_mssql.py  appveyor.yml  cpp_helpers.h  dbapitest.py  dist.bat  dist.sh  docker-compose.yml  ftds_sqlfront.pxd  ftds_sqlfront.pyx  gc_upload.py  helperlib.c  mssqldbmodule.c  print_freetds_version.py  print_versions.py  pymssql.py  pymssql.pyx  pymssql_gevent_test.py  (+12 more)
.circleci/: config.yml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_macos.yml  build_wheels.yml  publish-linux.yml  publish-macos.yml  publish-windows.yml  test.yml  test_linux.yml  test_linux_aarch64.yml  test_macos.yml  test_windows.yml  test_workflow.yml  testit.yml
appveyor/: install-deps.cmd  pypirc  sql-server-activate-tcp-fixed-port.ps1  tests.cfg
dev/: __init__.py  build.py  build_freetds.sh  build_freetds_linux.sh  build_manylinux_wheels.sh  build_wheels.sh  build_windows_wheels.py  ccompiler.py  deploy_manylinux_wheels.sh  dev-requirements.pip  hudson.sh  memmonitor.py  memtest.py  memtest.sh  requirements-dev.txt  requirements-test.txt  test_manylinux_wheels.sh  travis_env.sh
dev/appveyor/: install-win-iconv.ps1  pypirc  run_with_env.cmd  sql-server-activate-tcp-fixed-port.ps1  tests.cfg
docs/: Makefile  _mssql_examples.rst  azure.rst  building_and_developing.rst  changelog.rst  compilation.rst  conf.py  docker.rst  faq.rst  freetds.rst  freetds_and_dates.rst  history.rst  index.rst  intro.rst  make.bat  migrate_1_x_to_2_x.rst  pymssql_examples.rst  release_notes.rst  requirements.txt  todo.rst
docs/images/: pymssql-stack.graphml
docs/internals/: index.rst  releasing.rst
docs/ref/: _mssql.rst  pymssql.rst
extra/: travis_env.sh
extra/nagios-plugin/: mssql.cfg
freetds/nix_32/include/: sqlfront.h  sybdb.h  tds_sysdep_public.h
freetds/nix_64/include/: tds_sysdep_public.h
freetds/vs2008_32/include/: sqlfront.h  sybdb.h  tds_sysdep_public.h
freetds/vs2008_32/lib/: db-lib.lib  tds.lib
freetds/vs2008_64/include/: tds_sysdep_public.h
freetds/vs2008_64/lib/: db-lib.lib  tds.lib
homepage/: REDIST.txt  advancedinfo.php  architecture.php  compilation.php  documentation.php  download.php  examples__mssql.php  examples_pymssql.php  faq.php  freetds_dates.php  index.php  introduction.php  license.php  limitations.php  links.php  pagefooter.php  pageheader.php  platforms.php  ref__mssql.php  ref_pymssql.php  style.css  support.php
nagios-plugin/: check_mssql  mssql.cfg
scripts/: memmonitor.py  memtest.py
src/: _mssql.pxd  _mssql.pyx  cpp_helpers.h  print_versions.py  pymssql.pyx  pypy_helpers.h  sqlfront.pxd  version.h
src/pymssql/: __init__.py  __init__.pyi  _mssql.pxd  _mssql.pyi  _mssql.pyx  _pymssql.pyi  _pymssql.pyx  exceptions.py  exceptions.pyi  sqlfront.pxd  types.py  version.h
tests/: __init__.py  all.py  apitest.py  conftest.py  drop_stored_procedures.sql  helpers.py  mssqltests.py  nose_plugin.py  queries.py  run_sqlalchemy_tests.py  sprocs.py  stored_procedures.py  stored_procedures.sql  test_bulk_copy.py  test_charset.py  test_config.py  test_connection_as_dict.py  test_connection_timeout.py  test_connections.py  test_context_managers.py  test_database.py  test_datetime.py  test_debug_queries.py  test_err_handle.py  test_green.py  test_memory.py  test_parameters.py  test_pymssql.py  test_queries.py  test_query_parameters.py  test_query_size.py  test_quote_simple_value.py  test_sprocs.py  test_sqlalchemy.py  test_threaded.py  test_types.py  test_unicode.py  test_user_msghandler.py  test_utils.py  tests.cfg.tpl  (+1 more)
wheels/: pymssql-0.1.dev1361-cp312-cp312-macosx_15_0_arm64.whl
win32/freetds/include/: bkpublic.h  cspublic.h  cstypes.h  ctpublic.h  sqldb.h  sqlfront.h  sybdb.h  syberror.h  sybfront.h  tds_sysdep_public.h
win32/freetds/lib/: dblib.lib  libTDS.lib
