[build-system]
requires = [
    "packaging>=24",
    "setuptools>=54.0,<70.3",
    "setuptools_scm[toml]>=5.0",
    "wheel>=0.36.2",
    "Cython>=3.0.10",
    "tomli",
    ]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pymssql" = ["py.typed"]

[tool.setuptools_scm]
write_to = "src/pymssql/version.h"
write_to_template = 'const char* PYMSSQL_VERSION = "{version}";'
local_scheme = "no-local-version"

[tool.freetds]
version_for_pypi_wheels = "1.4.26"

[project]
name =  "pymssql"
dynamic =  ["version", "readme"]
description = 'DB-API interface to Microsoft SQL Server for Python. (new Cython-based version)'
license = { text = "LGPL" }
authors = [{name = "Damien Churchill", email = "damoxc@gmail.com"}]
maintainers = [{name = "Mikhail Terekhov", email = "termim@gmail.com"}]
keywords = ['mssql', 'SQL Server', 'database', 'DB-API']
requires-python = ">=3.8"
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
]

[project.urls]
homepage = "https://github.com/pymssql/pymssql"
repository = "https://github.com/pymssql/pymssql"
documentation = "http://pymssql.readthedocs.io"
"Bug Tracker" = "https://github.com/pymssql/pymssql/issues"
"Changelog" =  "https://github.com/pymssql/pymssql/blob/master/ChangeLog.rst"
